# gpt4shell

./: .gitignore  Dockerfile  README.md  TEST_COVERAGE.md  build  example-config.json  pyproject.toml  run_tests.py  test_config.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
docs/: RELEASE_PROCESS.md  SEMANTIC_RELEASE.md
gpt4shell/: __init__.py  __main__.py  settings.py
issues/: 1.md
tests/: __init__.py  test_config_main.py  test_integration.py  test_main.py  test_settings.py
