[tool.poetry]
name = "gpt4shell"
version = "0.1.0.1"
description = "A terminal-based chat application with rich text formatting"
authors = ["Igor Souza <igormcsouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "13.7.1"
langchain = "^0.1.13"
langchain-core = "^0.1.33"
langchain-openai = "^0.1.1"

[tool.poetry.scripts]
gpt = "gpt4shell:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
