[tool.poetry]
name = "gpt4shell"
version = "0.0.0"
description = "A terminal-based chat application with rich text formatting"
authors = ["Igor Souza <igormcsouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "13.7.1"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"

[tool.poetry.scripts]
gpt = "gpt4shell:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "poetry build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
commit_message = "🔖 {version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []
